# rv32i

./: .gitignore  CMakeLists.txt  README.md  config.h  fetch.cpp  fetch.h  main.cpp  op_codes.h  rv32i.cpp  rv32i.h
binaries/: text_hello_world.hex
decode/: decode.cpp  decode.h
disassemble/: disassemble.cpp  disassemble.h
execute/: execute.cpp  execute.h
fetch/: fetch.h
include/: commands.h  immediate.cpp  immediate.h  type.cpp  type.h
print/: print.cpp  print.h
rv32i/: rv32i.cpp  rv32i.h
